crates/python_parser/tests/snapshots/invalid_syntax@while_stmt_missing_test.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/while_stmt_missing_test.py
---
## AST

```
Module(
    ModModule {
        range: 0..30,
        body: [
            While(
                WhileStmt {
                    range: 0..11,
                    test: Name(
                        NameExpr {
                            range: 5..5,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 8..11,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 8..11,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            While(
                WhileStmt {
                    range: 12..29,
                    test: Name(
                        NameExpr {
                            range: 17..17,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Assign(
                            AssignStmt {
                                range: 24..29,
                                targets: [
                                    Name(
                                        NameExpr {
                                            range: 24..25,
                                            id: Name("a"),
                                            ctx: Store,
                                        },
                                    ),
                                ],
                                value: NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 28..29,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | while : ...
  |       ^ Syntax Error: Expected an expression
2 | while :
3 |     a = 1
  |


  |
1 | while : ...
2 | while :
  |       ^ Syntax Error: Expected an expression
3 |     a = 1
  |
